# oh-my-tai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/tai/: __init__.py  cli.py  config.py  executor.py  llm.py  tools.py
tests/: test_cli.py  test_config.py  test_executor.py  test_llm.py  test_tools.py
